# free-openai-starter

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.example.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: accounts.example.yaml  proxies.example.yaml  routing.example.yaml
config/presets/: tken-kimi-free.yaml  tken-minimax-free.yaml
core/: __init__.py  app.py  server.py
core/providers/: openai_compatible.py
core/strategies/: __init__.py
docs/: architecture.md  community-posts.md  deployment.md  faq.md  github-launch-pack.md  github-seo.md  launch-strategy.md  manual-publish-checklist.md  monetization.md  presets.md  quickstart.md  status-endpoint.md  tiktok-launch-pack.md  tken-integration.md
docs/superpowers/plans/: 2026-04-22-openai-unlimited-multi-account-proxy-api-manager.md
examples/: README.md
examples/curl/: chat_completion.sh
examples/go/: go.mod  main.go
examples/node/: openai_client.mjs  package.json
examples/python/: openai_client.py
modules/: __init__.py
modules/account_manager/: __init__.py  manager.py
modules/api_router/: router.py
modules/proxy_manager/: __init__.py  manager.py
modules/rate_limit_handler/: __init__.py  retry.py
node/: demo.js  package.json
python/: demo.py
tests/: test_account_manager.py  test_api_router.py  test_proxy_manager.py  test_rate_limit_handler.py  test_server.py
web/: app.js  index.html  styles.css
web-ui/: README.md
(+1 files in other folders)
