[project]
name = "openai-unlimited-multi-account-proxy-api-manager"
version = "0.1.0"
description = "Developer-first OpenAI-compatible proxy manager with account rotation, retry, and proxy routing."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "uvicorn>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
